--- a/masks.html
+++ b/masks.html
@@ -56,6 +56,11 @@
             <img src="img/coupon.png" width="20px" height="20px" style="margin-left: 20px;">
             <div style="color: white; font-size: 18px; margin-left: 20px;">Daftar Masker</div>
         </div>
+        <div onclick="openRedeems()" class="menu-item"
+             style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; align-items: center;">
+            <img src="img/gift.png" width="20px" height="20px" style="margin-left: 20px;">
+            <div style="color: white; font-size: 18px; margin-left: 20px;">Penukaran Poin</div>
+        </div>
         <div onclick="logout()" class="menu-item"
              style="width: 100%; height: 40px; display: flex; flex-flow: row nowrap; align-items: center;">
             <img src="img/logout.png" width="20px" height="20px" style="margin-left: 20px;">
