--- a/viewredeem.html
+++ b/viewredeem.html
@@ -3,9 +3,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/jquery.js"></script>
     <script src="js/global.js"></script>
-    <script src="js/diseases.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/viewredeem.js"></script>
     <link href="css/global.css" rel="stylesheet">
-    <link href="css/diseases.css" rel="stylesheet">
 </head>
 <body>
 <div style="width: 100%; overflow-x: hidden!important; position: relative;">
@@ -15,16 +15,34 @@
                 <img src="img/menu.png" width="20px" height="20px" style="margin-left: 10px;">
             </div>
             <div style="width: 100%; height: 100%; display: flex; flex-flow: row nowrap; align-items: center; background-color: #3fd598;">
-                <div style="color: white; font-family: PalanquinBold; font-size: 18px; margin-left: 20px;">DAFTAR PENYAKIT</div>
+                <div style="color: white; font-family: PalanquinBold; font-size: 18px; margin-left: 20px;">CEK MASKER</div>
             </div>
         </div>
-        <div id="diseases" style="width: 100%; display: flex; flex-flow: column nowrap; padding: 10px; margin-top: 60px; margin-bottom: 70px;">
+        <div style="width: 100%; display: flex; flex-flow: column nowrap; margin-top: 60px;">
+            <div style="width: 100%; display: flex; justify-content: center; margin-top: 10px;">
+                <img id="mask-img" width="300px" height="300px">
+            </div>
+            <div style="width: calc(100% - 40px); margin-left: 20px; margin-right: 20px; height: 1px; background-color: rgba(0, 0, 0, .5); margin-top: 10px;"></div>
+            <div style="width: 100%; display: flex; justify-content: center;"><b>DATA MASKER</b></div>
+            <div style="margin-left: 20px; color: black; font-size: 18px;"><b>Nama masker:</b><div id="mask-name"></div></div>
+            <div style="margin-left: 20px; color: black; font-size: 18px;"><b>Link:</b><div id="mask-link"></div></div>
+            <div style="margin-left: 20px; color: black; font-size: 18px;"><b>Kode masker:</b><div id="mask-code"></div></div>
+            <div style="margin-left: 20px; color: black; font-size: 18px;"><b>Kode filter:</b><div id="filter-code"></div></div>
+            <div style="margin-left: 20px; color: black; font-size: 18px;"><b>Price:</b><div id="mask-price"></div></div>
+            <div style="margin-left: 20px; color: black; font-size: 18px;"><b>Jumlah minimum poin:</b><div id="mask-points"></div></div>
+            <div style="width: 100%; display: flex; justify-content: center;"><b>DATA PEMBELI</b></div>
+            <div style="margin-left: 20px; color: black; font-size: 18px;"><b>Nama pembeli:</b><div id="buyer-name"></div></div>
+            <div style="margin-left: 20px; color: black; font-size: 18px;"><b>Email pembeli:</b><div id="buyer-email"></div></div>
+            <div style="margin-left: 20px; color: black; font-size: 18px;"><b>No. HP pembeli:</b><div id="buyer-phone"></div></div>
+            <div style="width: 100%; display: flex; justify-content: center; margin-top: 10px; margin-bottom: 20px;">
+                <button id="call-buyer" class="colorful-button">HUBUNGI PEMBELI</button>
+            </div>
         </div>
     </div>
     <div id="overlay" onclick="closeMenu()"
          style="display: none; position: fixed; left: 0; top: 0; width: 100%; height: 100%;"></div>
     <div id="menu-container"
-         style="z-index: 2000; transition: margin-left .5s; position: fixed; left: 0; top: 0; height: 100%; margin-left: -250px; width: 250px; background-color: #0b7abf; display: flex; flex-flow: column nowrap;">
+         style="z-index: 4000; transition: margin-left .5s; position: fixed; left: 0; top: 0; height: 100%; margin-left: -250px; width: 250px; background-color: #0b7abf; display: flex; flex-flow: column nowrap;">
         <div style="width: 100%; display: flex; align-items: center; margin-top: 50px; flex-flow: column nowrap;">
             <div style="width: 80px; height: 80px; background-color: white; -webkit-border-radius: 50%;-moz-border-radius: 50%;border-radius: 50%; display: flex; justify-content: center; align-items: center;">
                 <img src="img/icon.png" width="78px" height="78px">
@@ -66,66 +84,60 @@
             <div style="color: white; font-size: 18px; margin-left: 20px;">Keluar</div>
         </div>
     </div>
-    <div style="box-shadow: 0 -4px 8px rgba(0, 0, 0, .5); background-color: white; width: 100%; padding-top: 10px; padding-bottom: 10px; position: fixed; bottom: 0; right: 0; display: flex; flex-flow: row nowrap; justify-content: flex-end; align-items: center;">
-        <button onclick="addDisease()" class="button1"
-                style="padding-left: 20px; padding-right: 20px; margin-right: 10px;">TAMBAHKAN PENYAKIT
-        </button>
+</div>
+<div id="user-menu" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
+    <div style="width: calc(100% - 60px); margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap;">
+        <div style="width: 100%; display: flex; justify-content: center;">
+            <div style="color: black; font-size: 18px; font-weight: bold;">Menu</div>
+        </div>
+        <div onclick="confirmUser()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
+            <div style="color: black;">Konfirmasi User</div>
+        </div>
+        <div onclick="editUser()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
+            <div style="color: black;">Edit</div>
+        </div>
+        <div onclick="deleteUser()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
+            <div style="color: black;">Hapus</div>
+        </div>
+        <div onclick="closeUserMenuDialog()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
+            <div style="color: black;">Tutup</div>
+        </div>
     </div>
 </div>
-<div id="edit-disease" style="z-index: 4000; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
+<div id="edit-user" style="z-index: 4000; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
     <div style="width: calc(100% - 60px); max-height: calc(100% - 40px); margin-top: 20px; margin-bottom: 20px; margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap; overflow-y: scroll;">
         <div style="width: 100%; display: flex; justify-content: center;">
-            <div id="edit-disease-title" style="color: black; font-size: 18px; font-weight: bold;">Edit Penyakit</div>
+            <div id="edit-user-title" style="color: black; font-size: 18px; font-weight: bold;">Edit Pengguna</div>
         </div>
         <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Nama penyakit:
+            Nama:
         </div>
-        <input type="text" class="flat-input-2" id="disease-name">
+        <input type="text" class="flat-input-2" id="user-name">
         <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Ditemukan pada tahun:
+            Email:
         </div>
-        <input type="text" class="flat-input-2" id="disease-found">
+        <input type="text" class="flat-input-2" id="user-email">
         <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Tahun paling banyak kasus:
+            No. HP:
         </div>
-        <input type="text" class="flat-input-2" id="disease-years">
+        <input type="text" class="flat-input-2" id="user-phone">
         <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Kasus kematian:
+            Kata sandi:
         </div>
-        <input type="text" class="flat-input-2" id="disease-death">
-        <div style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            Sejarah penyakit:
-        </div>
-        <input type="text" class="flat-input-2" id="disease-history">
+        <input type="password" class="flat-input-2" id="user-password">
         <div style="width: 100%; display: flex; flex-flow: row nowrap; justify-content: flex-end; margin-bottom: 20px;">
-            <button id="edit-disease-cancel" class="flat-button-2">Batal</button>
-            <button id="edit-disease-ok" class="flat-button-2">OK</button>
+            <button id="edit-user-cancel" class="flat-button-2">Batal</button>
+            <button id="edit-user-ok" class="flat-button-2">OK</button>
         </div>
     </div>
 </div>
-<div id="loading-container" style="z-index: 2; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
+<div id="loading-container" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
     <div style="width: 200px; height: 100px; margin-top: 20px; margin-bottom: 20px; margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; justify-content: center; align-items: center;">
         <div id="loading-text" style="color: black;">Memuat...</div>
     </div>
 </div>
 <div id="toast-container" style="z-index: 1000; position: fixed; bottom: 0; left: 0; width: 100%; display: none; justify-content: center;">
     <div id="toast-text" style="margin-bottom: 20px; padding-left: 10px; padding-right: 10px; height: 30px; background-color: rgba(0, 0, 0, .9); border-radius: 5px; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3); color: white;">
-    </div>
-</div>
-<div id="disease-menu" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
-    <div style="width: calc(100% - 60px); margin-left: 30px; margin-right: 30px; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .5); background-color: white; display: flex; flex-flow: column nowrap;">
-        <div style="width: 100%; display: flex; justify-content: center;">
-            <div style="color: black; font-size: 18px; font-weight: bold;">Menu</div>
-        </div>
-        <div onclick="editDisease()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center;">
-            <div style="color: black;">Edit</div>
-        </div>
-        <div onclick="deleteDisease()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-            <div style="color: black;">Hapus</div>
-        </div>
-        <div onclick="closeDiseaseMenuDialog()" class="menu-item-2" style="width: calc(100% - 40px); padding-left: 20px; padding-right: 20px; height: 40px; display: flex; align-items: center; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-            <div style="color: black;">Tutup</div>
-        </div>
     </div>
 </div>
 <div id="confirm-container" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); display: none; justify-content: center; align-items: center;">
