--- a/masks.html
+++ b/masks.html
@@ -143,7 +143,7 @@
     </div>
 </div>
 <div id="toast-container" style="z-index: 1000; position: fixed; bottom: 0; left: 0; width: 100%; display: none; justify-content: center;">
-    <div id="toast-text" style="margin-bottom: 20px; padding-left: 10px; padding-right: 10px; height: 30px; background-color: rgba(0, 0, 0, .9); border-radius: 5px; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3); color: white;">
+    <div id="toast-text" style="margin-bottom: 20px; padding-left: 10px; padding-right: 10px; height: 30px; background-color: rgba(0, 0, 0, .9); border-radius: 5px; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3); color: white; word-wrap: break-word;">
     </div>
 </div>
 <div onclick="addMask()" class="fab" style="width: 50px; height: 50px; position: fixed; bottom: 0; right: 0; margin-right: 20px; margin-bottom: 20px; border-radius: 50%; box-shadow: rgba(0, 0, 0, .5); display: flex; justify-content: center; align-items: center;">
